# MicroTorrent

./: .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md
src/: backend.cpp  backend.hpp  main.cpp  utils.hpp
ui/: popups.slint  window.slint
